[package]
name = "katal-chain"
version = "0.5.3"
authors = ["Trinkler Software <company@trinkler.software>"]
build = "node/build.rs"
edition = "2018"

[[bin]]
name = "katalchain"
path = "node/src/main.rs"

[dependencies]
# Used for fixtures
hex-literal = "0.2.1"
serde_json = "1.0.41"
substrate-telemetry = { git = "https://github.com/katalchain/substrate", branch = "polkadot-master" }
# Used for node
derive_more = "0.15.0"
futures = "0.3.1"
futures01 = { package = "futures", version = "0.1.29" }
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"
sr-io = { git = "https://github.com/katalchain/substrate", branch = "polkadot-master" }
substrate-cli = { git = "https://github.com/katalchain/substrate", branch = "polkadot-master" }
primitives = { package = "substrate-primitives", git = "https://github.com/katalchain/substrate", branch = "polkadot-master" }
substrate-executor = { git = "https://github.com/katalchain/substrate", branch = "polkadot-master" }
substrate-service = { git = "https://github.com/katalchain/substrate", branch = "polkadot-master" }
inherents = { package = "substrate-inherents", git = "https://github.com/katalchain/substrate", branch = "polkadot-master" }
transaction-pool = { package = "substrate-transaction-pool", git = "https://github.com/katalchain/substrate", branch = "polkadot-master" }
network = { package = "substrate-network", git = "https://github.com/katalchain/substrate", branch = "polkadot-master" }
aura = { package = "substrate-consensus-aura", git = "https://github.com/katalchain/substrate", branch = "polkadot-master" }
aura-primitives = { package = "substrate-consensus-aura-primitives", git = "https://github.com/katalchain/substrate", branch = "polkadot-master" }
grandpa = { package = "substrate-finality-grandpa", git = "https://github.com/katalchain/substrate", branch = "polkadot-master" }
grandpa-primitives = { package = "substrate-finality-grandpa-primitives", git = "https://github.com/katalchain/substrate", branch = "polkadot-master" }
substrate-client = {  git = "https://github.com/katalchain/substrate", branch = "polkadot-master" }
runtime = { package = "katalchain-runtime", path = "node/runtime" }
sr-primitives = { git = "https://github.com/katalchain/substrate", branch = "polkadot-master" }
basic-authorship = { package = "substrate-basic-authorship", git = "https://github.com/katalchain/substrate", branch = "polkadot-master" }

[build-dependencies]
vergen = "3.0.4"
build-script-utils = { package = "substrate-build-script-utils", git = "https://github.com/katalchain/substrate", branch = "polkadot-master" }
