[package]
name = "katal"
version = "1.0.0"
authors = ["Anonymous"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "katal"
path = "src/main.rs"

[dependencies]
error-chain = "0.12"
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
log = "0.4"
tokio = "0.1"
exit-future = "0.1"
parking_lot = "0.7.1"
parity-codec = "3.3"
trie-root = "0.12.2"
sr-io = { path = "../substrate/core/sr-io" }
substrate-cli = { path = "../substrate/core/cli" }
primitives = { package = "substrate-primitives", path = "../substrate/core/primitives" }
substrate-executor = { path = "../substrate/core/executor" }
substrate-service = { path = "../substrate/core/service" }
inherents = { package = "substrate-inherents", path = "../substrate/core/inherents" }
transaction-pool = { package = "substrate-transaction-pool", path = "../substrate/core/transaction-pool" }
network = { package = "substrate-network", path = "../substrate/core/network" }
consensus = { package = "substrate-consensus-aura", path = "../substrate/core/consensus/aura" }
substrate-client = {  path = "../substrate/core/client" }
basic-authorship = { package = "substrate-basic-authorship", path = "../substrate/core/basic-authorship" }
katal-runtime = { path = "runtime" }

[build-dependencies]
vergen = "3"
