[package]
name = "katal-runtime"
version = "2.0.0"
authors = ["Anonymous"]
edition = "2018"

[dependencies]
# External crates
serde = { version = "1.0", optional = true, features = ["derive"] }
safe-mix = { version = "1.0", default-features = false }
parity-codec = { version = "3.3", default-features = false, features = ["derive"] }
# Core crates
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default_features = false }
runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default_features = false }
version = { package = "sr-version", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default_features = false }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default_features = false }
runtime-primitives = { package = "sr-primitives", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default_features = false }
client = { package = "substrate-client", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default_features = false }
consensus-aura = { package = "substrate-consensus-aura-primitives", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default_features = false }
offchain-primitives = { package = "substrate-offchain-primitives", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
consensus_authorities = { package = "substrate-consensus-authorities", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
# SRML crates
support = { package = "srml-support", path = "../srml/support", default_features = false }
executive = { package = "srml-executive", path = "../srml/executive", default_features = false }
balances = { package = "srml-balances", path = "../srml/balances", default_features = false }
consensus = { package = "srml-consensus", path = "../srml/consensus", default_features = false }
aura = { package = "srml-aura", path = "../srml/aura", default_features = false }
indices = { package = "srml-indices", path = "../srml/indices", default_features = false }
system = { package = "srml-system", path = "../srml/system", default_features = false }
timestamp = { package = "srml-timestamp", path = "../srml/timestamp", default_features = false }
sudo = { package = "srml-sudo", path = "../srml/sudo", default_features = false }
# KRML crates
reals = { package = "krml-reals", path = "../krml/reals", default_features = false }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"client/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"balances/std",
	"executive/std",
	"aura/std",
	"indices/std",
	"primitives/std",
	"runtime-primitives/std",
	"system/std",
	"timestamp/std",
	"sudo/std",
	"version/std",
	"serde",
	"safe-mix/std",
	"consensus-aura/std",
	"offchain-primitives/std",
	"consensus_authorities/std",
	"reals/std",
]
