[package]
name = "katal-runtime"
version = "0.0.1"
authors = ["Trinkler Software <company@trinkler.software>"]
edition = "2018"

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"client/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"balances/std",
	"executive/std",
	"aura/std",
	"indices/std",
	"primitives/std",
	"runtime-primitives/std",
	"system/std",
	"timestamp/std",
	"sudo/std",
	"version/std",
	"serde",
	"safe-mix/std",
	"consensus-aura/std",
	"offchain-primitives/std",
]

# Rust crates
[dependencies.serde]
version = "1.0"
optional = true

[dependencies.parity-codec]
version = "3.3"
default-features = false
features = ["derive"]

[dependencies.safe-mix]
version = "1.0"
default-features = false

# Substrate Core crates
[dependencies.rstd]
package = "sr-std"
git = "https://github.com/paritytech/substrate.git"
branch = 'v1.0'
default-features = false

[dependencies.runtime_primitives]
package = "sr-primitives"
git = "https://github.com/paritytech/substrate.git"
branch = 'v1.0'
default-features = false

[dependencies.runtime-io]
package = "sr-io"
git = "https://github.com/paritytech/substrate.git"
branch = 'v1.0'
default-features = false

[dependencies.version]
package = "sr-version"
git = "https://github.com/paritytech/substrate.git"
branch = 'v1.0'
default-features = false

[dependencies.client]
package = "substrate-client"
git = "https://github.com/paritytech/substrate.git"
branch = 'v1.0'
default-features = false

[dependencies.primitives]
package = "substrate-primitives"
git = "https://github.com/paritytech/substrate.git"
branch = 'v1.0'
default-features = false

[dependencies.consensus-aura]
package = "substrate-consensus-aura-primitives"
git = "https://github.com/paritytech/substrate.git"
branch = 'v1.0'
default-features = false

[dependencies.offchain-primitives]
package = "substrate-offchain-primitives"
git = "https://github.com/paritytech/substrate.git"
branch = 'v1.0'
default-features = false

# SRML crates
[dependencies.support]
package = "srml-support"
git = "https://github.com/paritytech/substrate.git"
branch = 'v1.0'
default-features = false

[dependencies.system]
package = "srml-system"
git = "https://github.com/paritytech/substrate.git"
branch = 'v1.0'
default-features = false

[dependencies.executive]
package = "srml-executive"
git = "https://github.com/paritytech/substrate.git"
branch = 'v1.0'
default-features = false

[dependencies.balances]
package = "srml-balances"
git = "https://github.com/paritytech/substrate.git"
branch = 'v1.0'
default-features = false

[dependencies.aura]
package = "srml-aura"
git = "https://github.com/paritytech/substrate.git"
branch = 'v1.0'
default-features = false

[dependencies.indices]
package = "srml-indices"
git = "https://github.com/paritytech/substrate.git"
branch = 'v1.0'
default-features = false

[dependencies.timestamp]
package = "srml-timestamp"
git = "https://github.com/paritytech/substrate.git"
branch = 'v1.0'
default-features = false

[dependencies.sudo]
package = "srml-sudo"
git = "https://github.com/paritytech/substrate.git"
branch = 'v1.0'
default-features = false
