[package]
name = "katal-runtime"
version = "1.0.0"
authors = ["Anonymous"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
safe-mix = { version = "1.0", default-features = false }
parity-codec = { version = "3.3", default-features = false, features = ["derive"] }
rstd = { package = "sr-std", path = "../../substrate/core/sr-std", default_features = false }
runtime-io = { package = "sr-io", path = "../../substrate/core/sr-io", default_features = false }
version = { package = "sr-version", path = "../../substrate/core/sr-version", default_features = false }
support = { package = "srml-support", path = "../../substrate/srml/support", default_features = false }
primitives = { package = "substrate-primitives", path = "../../substrate/core/primitives", default_features = false }
balances = { package = "srml-balances", path = "../../substrate/srml/balances", default_features = false }
consensus = { package = "srml-consensus", path = "../../substrate/srml/consensus", default_features = false }
aura = { package = "srml-aura", path = "../../substrate/srml/aura", default_features = false }
executive = { package = "srml-executive", path = "../../substrate/srml/executive", default_features = false }
indices = { package = "srml-indices", path = "../../substrate/srml/indices", default_features = false }
system = { package = "srml-system", path = "../../substrate/srml/system", default_features = false }
timestamp = { package = "srml-timestamp", path = "../../substrate/srml/timestamp", default_features = false }
sudo = { package = "srml-sudo", path = "../../substrate/srml/sudo", default_features = false }
runtime-primitives = { package = "sr-primitives", path = "../../substrate/core/sr-primitives", default_features = false }
client = { package = "substrate-client", path = "../../substrate/core/client", default_features = false }
consensus-aura = { package = "substrate-consensus-aura-primitives", path = "../../substrate/core/consensus/aura/primitives", default_features = false }
offchain-primitives = { package = "substrate-offchain-primitives", path = "../../substrate/core/offchain/primitives", default-features = false }
consensus_authorities = { package = "substrate-consensus-authorities", path = "../../substrate/core/consensus/authorities", default-features = false }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"client/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"balances/std",
	"executive/std",
	"aura/std",
	"indices/std",
	"primitives/std",
	"runtime-primitives/std",
	"system/std",
	"timestamp/std",
	"sudo/std",
	"version/std",
	"serde",
	"safe-mix/std",
	"consensus-aura/std",
	"offchain-primitives/std",
	"consensus_authorities/std",
]
