[package]
name = "krml-actus"
version = "0.1.0"
authors = ["Trinkler Software <company@trinkler.software>"]
edition = "2018"

[dependencies]
# External crates
serde = { version = "1.0", optional = true }
parity-codec = { version = "3.3", default-features = false, features = ["derive"] }
# Core crates
rstd = { package = "sr-std", path = "../../core/sr-std", default-features = false }
runtime_primitives = { package = "sr-primitives", path = "../../core/sr-primitives", default-features = false }
# SRML crates
srml-support = { path = "../../srml/support", default-features = false }
system = { package = "srml-system", path = "../../srml/system", default-features = false }
timestamp = { package = "srml-timestamp", path = "../../srml/timestamp", default-features = false }
# KRML crates
reals = { package = "krml-reals", path = "../reals", default-features = false }
time = { package = "krml-time", path = "../time", default-features = false }

[dev-dependencies]
runtime_io = { package = "sr-io", path = "../../core/sr-io" }
substrate-primitives = { path = "../../core/primitives" }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"rstd/std",
	"runtime_primitives/std",
	"srml-support/std",
	"serde",
	"system/std",
	"timestamp/std",
	"reals/std",
	"time/std",
]
