[package]
name = "krml-actus"
version = "0.1.0"
authors = ["Trinkler Software <company@trinkler.software>"]
edition = "2018"

[dependencies]
# External crates
serde = { version = "1.0", optional = true }
parity-codec = { version = "3.3", default-features = false, features = ["derive"] }
# Core crates
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
runtime_primitives = { package = "sr-primitives", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
# SRML crates
srml-support = { git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
system = { package = "srml-system", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
timestamp = { package = "srml-timestamp", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea", default-features = false }
# KRML crates
reals = { package = "krml-reals", path = "../reals", default-features = false }
time = { package = "krml-time", path = "../time", default-features = false }

[dev-dependencies]
runtime_io = { package = "sr-io", git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea" }
substrate-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "e7e53ea" }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"rstd/std",
	"runtime_primitives/std",
	"srml-support/std",
	"serde",
	"system/std",
	"timestamp/std",
	"reals/std",
	"time/std",
]
