[package]
name = "krml-time"
version = "0.1.0"
authors = ["Trinkler Software <company@trinkler.software>"]
edition = "2018"

[dependencies]
# External crates
serde = { version = "1.0", optional = true }
parity-codec = { version = "3.3", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"serde",
]
