[package]
name = "modules-actus"
version = "0.0.1"
authors = ["Trinkler Software <company@trinkler.software>"]
edition = "2018"

[features]
default = ["std"]
std = [
	"serde",
	"parity-codec/std",
	"rstd/std",
	"runtime_primitives/std",
	"support/std",
	"system/std",
	"reals/std",
	"time/std",
]

# Rust crates
[dependencies.serde]
version = "1.0"
optional = true

[dependencies.parity-codec]
version = "3.3"
default-features = false
features = ["derive"]

# Substrate Core crates
[dependencies.rstd]
package = "sr-std"
git = "https://github.com/paritytech/substrate.git"
rev = "dbf3226"
default-features = false

[dependencies.runtime_primitives]
package = "sr-primitives"
git = "https://github.com/paritytech/substrate.git"
rev = "dbf3226"
default-features = false

# SRML crates
[dependencies.support]
package = "srml-support"
git = "https://github.com/paritytech/substrate.git"
rev = "dbf3226"
default-features = false

[dependencies.system]
package = "srml-system"
git = "https://github.com/paritytech/substrate.git"
rev = "dbf3226"
default-features = false

# Katal crates
[dependencies.reals]
package = "modules-reals"
path = "../reals"
default-features = false

[dependencies.time]
package = "modules-time"
path = "../time"
default-features = false

# Debug crates
#[dev-dependencies.runtime_io]
#package = "sr-io"
#git = "https://github.com/paritytech/substrate.git"
#rev = "dbf3226"

#[dev-dependencies.primitives]
#package = "substrate-primitives"
#git = "https://github.com/paritytech/substrate.git"
#rev = "dbf3226"
