[package]
name = "modules-actus"
version = "0.0.1"
authors = ["Trinkler Software <company@trinkler.software>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
parity-codec = { version = "4.1.1", default-features = false }
# Needed for various traits. In our case, `OnFinalize`.
primitives = { package = "sr-primitives", git = "https://github.com/paritytech/substrate.git", default-features = false }
# Needed for type-safe access to storage DB.
support = { package = "srml-support", git = "https://github.com/paritytech/substrate.git", default-features = false }
# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
system = { package = "srml-system", git = "https://github.com/paritytech/substrate.git", default-features = false }
reals = { package = "modules-reals", path = "../reals", default-features = false }
time = { package = "modules-time", path = "../time", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate.git", default-features = false }

[dev-dependencies]
substrate-primitives = { git = "https://github.com/paritytech/substrate.git", default-features = false }
sr-io = { git = "https://github.com/paritytech/substrate" }


[features]
default = ["std"]
std = [
	"serde",
	"parity-codec/std",
	"rstd/std",
	"primitives/std",
	"support/std",
	"system/std",
	"reals/std",
	"time/std",
]
