[package]
name = "modules-assets"
version = "0.1.0"
authors = ["Trinkler Software <company@trinkler.software>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
# Needed for various traits. In our case, `OnFinalize`.
sr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-master" }
# Needed for type-safe access to storage DB.
support = { package = "palette-support", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-master" }
# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
system = { package = "palette-system", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-master" }
# Palette specific to this module
structures = { package = "modules-structures", path = "../structures", default-features = false }

[dev-dependencies]
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate", branch = "polkadot-master" }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate", branch = "polkadot-master" }
runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate", branch = "polkadot-master" }

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "sr-primitives/std",
  "support/std",
  "system/std",
  "structures/std",
]
