[package]
name = "modules-contracts"
version = "0.1.0"
authors = ["Trinkler Software <company@trinkler.software>"]
edition = "2018"

[features]
default = ["std"]
std = [
	"serde",
	"parity-codec/std",
	"runtime_std/std",
	"primitives/std",
	"runtime_primitives/std",
	"support/std",
	"system/std",
	"timestamp/std",
	"oracle/std",
	"assets/std",
	"structures/std",
]

# Rust crates
[dependencies.serde]
version = "1.0"
optional = true

[dependencies.parity-codec]
version = "3.5"
default-features = false
features = ["derive"]

# Substrate Core crates
[dependencies.runtime_std]
package = "sr-std"
git = "https://github.com/paritytech/substrate.git"
branch = "v1.0"
default-features = false

[dependencies.primitives]
package = "substrate-primitives"
git = "https://github.com/paritytech/substrate.git"
branch = "v1.0"
default-features = false

[dependencies.runtime_primitives]
package = "sr-primitives"
git = "https://github.com/paritytech/substrate.git"
branch = "v1.0"
default-features = false

# SRML crates
[dependencies.support]
package = "srml-support"
git = "https://github.com/paritytech/substrate.git"
branch = "v1.0"
default-features = false

[dependencies.system]
package = "srml-system"
git = "https://github.com/paritytech/substrate.git"
branch = "v1.0"
default-features = false

[dependencies.timestamp]
package = "srml-timestamp"
git = "https://github.com/paritytech/substrate.git"
branch = "v1.0"
default-features = false

# Katal crates
[dependencies.oracle]
package = "modules-oracle"
path = "../oracle"
default-features = false

[dependencies.assets]
package = "modules-assets"
path = "../assets"
default-features = false

[dependencies.structures]
package = "modules-structures"
path = "../structures"
default-features = false

# Debug crates
[dev-dependencies.runtime_io]
package = "sr-io"
git = "https://github.com/paritytech/substrate.git"
branch = "v1.0"

#[dev-dependencies.runtime_primitives]
#package = "sr-primitives"
#git = "https://github.com/paritytech/substrate.git"
#branch = "v1.0"
