[package]
name = "modules-contracts"
version = "0.1.0"
authors = ["Trinkler Software <company@trinkler.software>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
# We need the H256 of this module
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
# Needed for various traits.
sr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
# Needed for type-safe access to storage DB.
support = { package = "frame-support", git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
system = { package = "frame-system", git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
# Palette specific to this module
timestamp = { package = "pallet-timestamp", git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
oracle = { package = "modules-oracle", path = "../oracle", default-features = false }
assets = { package = "modules-assets", path = "../assets", default-features = false }
structures = { package = "modules-structures", path = "../structures", default-features = false }

[dev-dependencies]
runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate", branch = "master" }

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "primitives/std",
  "sr-primitives/std",
  "support/std",
  "system/std",
  "timestamp/std",
  "oracle/std",
  "assets/std",
  "structures/std",
]
