[package]
name = "modules-ownership"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
parity-codec = { version = "4.1.1", default-features = false }
# Needed for various traits. In our case, `OnFinalize`.
primitives = { package = "sr-primitives", git = "https://github.com/paritytech/substrate.git", default-features = false }
# Needed for type-safe access to storage DB.
support = { package = "srml-support", git = "https://github.com/paritytech/substrate.git", default-features = false }
# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
system = { package = "srml-system", git = "https://github.com/paritytech/substrate.git", default-features = false }

[dev-dependencies]
substrate-primitives = { git = "https://github.com/paritytech/substrate.git", default-features = false }
sr-std = { git = "https://github.com/paritytech/substrate.git", default-features = false }
runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate.git" }

[features]
default = ["std"]
std = [
	"serde",
	"parity-codec/std",
	"primitives/std",
	"support/std",
	"system/std",
]
