[package]
name = "modules-priority-queue"
version = "0.1.0"
authors = ["Trinkler Software <company@trinkler.software>"]
edition = "2018"

[features]
default = ["std"]
std = [
	"serde",
	"parity-codec/std",
]

# Rust crates
[dependencies.serde]
version = "1.0"
optional = true

[dependencies.parity-codec]
version = "3.5"
default-features = false
features = ["derive"]
