[package]
name = "modules-reals"
version = "1.0.0"
authors = ["Trinkler Software <company@trinkler.software>"]
edition = "2018"

[features]
default = ["std"]
std = [
	"serde",
	"parity-codec/std",
]

[dependencies]
serde = { version = "1.0", optional = true }
parity-codec = { version = "4.1.1", default-features = false }
