[package]
name = "modules-structures"
version = "1.0.0"
authors = ["Trinkler Software <company@trinkler.software>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-master" }
substrate-debug-derive = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-master" }

[dev-dependencies.rand]
version = "0.7"

[features]
default = ["std"]
std = [
	"serde",
	"rstd/std",
	"substrate-debug-derive/std",
]
