[package]
name = "modules-structures"
version = "1.0.0"
authors = ["Trinkler Software <company@trinkler.software>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/katalchain/substrate", default-features = false, branch = "polkadot-master" }
substrate-debug-derive = { git = "https://github.com/katalchain/substrate", default-features = false, branch = "polkadot-master" }

[dev-dependencies]
primitives = { package = "substrate-primitives", git = "https://github.com/katalchain/substrate", branch = "polkadot-master" }
runtime-io = { package = "sr-io", git = "https://github.com/katalchain/substrate", branch = "polkadot-master" }
rand = "0.7"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"rstd/std",
	"substrate-debug-derive/std",
]
