[package]
name = "modules-structures"
version = "1.0.0"
authors = ["Trinkler Software <company@trinkler.software>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }

[dev-dependencies]
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate", branch = "master" }
runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate", branch = "master" }
rand = "0.7"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"rstd/std",
]
